# js-interpreter

./: .gitignore  .terraform.lock.hcl  Cargo.toml  README.md  build_wasm.sh  main.tf  profile.json  test.final.js  test.js
.github/workflows/: build-deploy.yml  build-test-deploy.yml
benchmarks/: arrAdd.js  arrPush.js  fibonacci.js  for.js
frontend/: package.json  pnpm-lock.yaml
frontend/src/lib/: worker.ts
frontend/src/routes/: +page.svelte  Button.svelte  ScrollArea.svelte
frontend/src/routes/test/: +page.svelte
src/: array.rs  ast.rs  console.rs  lexer.rs  lib.rs  main.rs  math.rs  parser.rs  runtime.rs  string.rs
