[package]
name = "js-interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[profile.profiling]
inherits = "release"
debug = true


[dependencies]
once_cell = "1.19.0"
wasm-bindgen = "0.2"
